Add week 10 handout

--- a/phil971-kant-rational-agency.org
+++ b/phil971-kant-rational-agency.org
@@ -1960,6 +1960,8 @@ This week we finish our discussion of Burge and Boyle on doxastic agency. We the
 look at criticism of both reflective control (Hieronymi) and of doxastic agency more
 generally (Setiya). 
 
+- [[/materials/handouts/10-kant-against-agency.pdf][Handout]] for week 10
+
 **** Readings
 - Hieronymi, "[[/materials/readings/hieronymi-reflection.pdf][Reflection and Responsibility]]"
    + Note that we'll be focusing primarily on her criticism of reflection theories,
