--- a/phil971-kant-rational-agency.org
+++ b/phil971-kant-rational-agency.org
@@ -2133,7 +2133,7 @@ SCHEDULED: <2020-11-03 Tue>
 This week we'll be discussing the role that teleolgy plays in Kant's conception of
 unity of the faculties of a rational animal. We'll start off by discussing a
 suggestion by Karl Schafer (see §§4-5) concerning the way that reason reorients all
-of the ends of one's animal faculties. Guest Sasha Mudd will then help lead us is
+of the ends of one's animal faculties. Guest Sasha Mudd will then help lead us in
 discussion of issues regarding the understanding of teleology in Kant more generally,
 as well as the sense in which theoretical reason might be "autonomous". 
 
